fix hamburger button menu visible in web version

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -239,17 +239,17 @@ ul li {
 	height: 44px;
 	overflow: hidden;
 	position: fixed;
-	right: 5%;
+	right: 10%;
 	text-indent: 100%;
-	top: 18px;
+	top: 38px;
 	white-space: nowrap;
+	color: #D1B23E;
 	width: 44px;
 	z-index: 99999;
 	-moz-transition: all 0.3s;
 	-o-transition: all 0.3s;
 	-webkit-transition: all 0.3s;
 	transition: all 0.3s;
-	background: rgba(174, 174, 174, 0.44);
 }
 .nav-toggle:before, .nav-toggle:after {
 	border-radius: 50%;
